--- a/ardb.conf
+++ b/ardb.conf
@@ -1,7 +1,7 @@
 # Ardb configuration file example, modified from redis's conf file.
 
 # Home dir for ardb instance, it can be referenced by ${ARDB_HOME} in this config file
-home  /opt/ardb/
+home  /ardb/src/
 
 # Note on units: when memory size is needed, it is possible to specify
 # it in the usual form of 1k 5GB 4M and so forth:
@@ -23,7 +23,7 @@ daemonize no
 pidfile ${ARDB_HOME}/ardb.pid
 
 # The thread pool size for the corresponding all listen servers, -1 means current machine's cpu number
-thread-pool-size              16
+thread-pool-size              -1
 
 #Accept connections on the specified host&port/unix socket, default is 0.0.0.0:16379.
 server[0].listen              0.0.0.0:16379
